// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThesisInfo renders empty if null 1`] = `""`;

exports[`ThesisInfo renders full thesis info 1`] = `
<span>
  <span>
    Thesis: 
  </span>
  <span>
    <InlineList
      extractKey={[Function]}
      items={
        Immutable.List [
          Immutable.Map {
            "name": "Institution 1",
          },
        ]
      }
      label={null}
      renderItem={[Function]}
      separateItems={true}
      separateItemsClassName="separate-items-with-comma"
      suffix={null}
      wrapperClassName="di"
    />
     
  </span>
  <span>
    (defense: 12-12-2012)
  </span>
</span>
`;

exports[`ThesisInfo renders with date and without defense date 1`] = `
<span>
  <span>
    Thesis: 
  </span>
  <span>
    <InlineList
      extractKey={[Function]}
      items={null}
      label={null}
      renderItem={[Function]}
      separateItems={true}
      separateItemsClassName="separate-items-with-comma"
      suffix={null}
      wrapperClassName="di"
    />
     
  </span>
  <span>
    (11-11-2011)
  </span>
</span>
`;

exports[`ThesisInfo renders with defense date 1`] = `
<span>
  <span>
    Thesis: 
  </span>
  <span>
    <InlineList
      extractKey={[Function]}
      items={null}
      label={null}
      renderItem={[Function]}
      separateItems={true}
      separateItemsClassName="separate-items-with-comma"
      suffix={null}
      wrapperClassName="di"
    />
     
  </span>
  <span>
    (defense: 12-12-2012)
  </span>
</span>
`;

exports[`ThesisInfo renders without any date 1`] = `
<span>
  <span>
    Thesis: 
  </span>
  <span>
    <InlineList
      extractKey={[Function]}
      items={
        Immutable.List [
          Immutable.Map {
            "name": "Institution 1",
          },
        ]
      }
      label={null}
      renderItem={[Function]}
      separateItems={true}
      separateItemsClassName="separate-items-with-comma"
      suffix={null}
      wrapperClassName="di"
    />
     
  </span>
  <span />
</span>
`;
